kubernetes/nginx/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: devops
  labels:
    app: nginx
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
        version: v1  
    spec:
      containers:
      - name: nginx
        image: springboot-study:nginx
        imagePullPolicy: Always
        ports:
        - containerPort: 80
