kubernetes/nginx/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: devops
  labels:
    app: nginx
    service: nginx
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
  type: LoadBalancer
