kubernetes/nginx/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: nginx-gateway
  namespace: devops
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 443 # loadbalancer forwarding port
      name: http # http or http2
      protocol: HTTP # HTTP or HTTP2
    hosts:
    - "*" # nginx.yeonghoo2.com
